# yash

./: .gitignore
apps/: CMakeLists.txt
apps/render/: CMakeLists.txt  btree.h  data_table.h  hash_tree.h  render.cpp  scene.h  scene_hash.h  scene_view.h  tree.h  view.h
apps/render/ext/: pico_sha.h
apps/render/scene/: scene_data.h  scene_hash.h  scene_view.h
apps/yash/: CMakeLists.txt  render.cpp  render.h
apps/yash/scene/: scene_hash.h  scene_view.h  shape.h
apps/yash/scene/hash_tree/: data_table.h  hash.h
apps/yscene/: render.cpp
libs/yocto/: yocto_bvh.cpp  yocto_bvh.h  yocto_parallel.h  yocto_scene.cpp  yocto_scene.h  yocto_trace.cpp
scripts/: render-all.py  solve_cone.m  test-mosaic.py
